src/tui/render/snapshots/agent_bar__tui__render__history__tests__history_amp_note.snap
---
source: src/tui/render/history.rs
expression: terminal.backend()
---
"┏ Histórico (7 dias) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃87.9K│                                                                              ⢀ ⡆⢸ ⢠┌──────┐┃"
"┃     │                                                                              ⢸ ⡇⢸ ⢸│claude│┃"
"┃     │                                                                            ⢸ ⢸ ⡇⢸ ⢸└──────┘┃"
"┃     │                                                                           ⡀⢸ ⢸ ⡇⢸ ⢸ ⡇⢸     ┃"
"┃     │                                                                           ⡇⢸ ⢸ ⡇⢸ ⢸ ⡇⢸     ┃"
"┃     │                                                                         ⢀ ⡇⢸ ⢸ ⡇⢸ ⣸ ⡇⢸ ⡇   ┃"
"┃     │                                                                         ⢸ ⡇⢸⡀⢸ ⡇⢸ ⣿ ⡇⢸ ⡇   ┃"
"┃     │                                                                         ⢸ ⡇⢸⡇⢸ ⡇⢸ ⣿ ⡇⢸ ⡇ ⡇ ┃"
"┃     │                                                                        ⡇⢸ ⡇⢸⡇⢸ ⡇⢸ ⣿ ⡇⢸ ⡇ ⡇ ┃"
"┃     │                                                                        ⡇⢸ ⡇⢸⡇⢸ ⡇⢸ ⣿ ⡇⢸ ⣿ ⡇⢠┃"
"┃     │                                                                      ⡄ ⡇⢸ ⡇⢸⡇⢸⢀⣇⣼⡄⣿⡀⡇⢸ ⣿ ⡇⢸┃"
"┃     │                                                                      ⡇⢰⡇⢸ ⡇⣼⡇⣿⣿⣿⣿⡇⣿⣷⣷⢸ ⣿ ⡇⢸┃"
"┃     │                                                                    ⢀ ⡇⢸⡇⢸⢠⣧⣿⡇⣿⣿⣿⣿⡇⣿⣿⣿⣿⡇⣿ ⡇⢸┃"
"┃     │                                                                    ⢸ ⡇⢸⡇⣼⣼⣿⣿⡇⣿⣿⣿⣿⡇⣿⣿⣿⣿⣿⣿ ⡇⢸┃"
"┃     │                                                     ⢰             ⡀⢸ ⡇⢸⣧⣿⣿⣿⣿⡇⣿⣿⣿⣿⡇⣿⣿⣿⣿⣿⣿⢸⣿⢸┃"
"┃     │                                                     ⢸             ⡇⢸⢀⣇⢸⣿⣿⣿⣿⣿⡇⣿⣿⣿⣿⣇⣿⣿⣿⣿⣿⣿⢸⣿⣾┃"
"┃     │                                                     ⢸ ⢸         ⡄ ⡇⢸⢸⣿⢸⣿⣿⣿⣿⣿⣷⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢸⣿⣿┃"
"┃     │                                                     ⣸⡀⢸ ⡄     ⢀ ⡇ ⡇⣿⣿⣿⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿┃"
"┃     │                                                     ⣿⡇⣼⡄⡇⢠ ⢀ ⡀⢸⢀⣇⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿┃"
"┃     │                                                     ⣿⡇⣿⣷⣷⣸⡀⣼ ⡇⣼⣼⣿⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿┃"
"┃0    │⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿⣇⣿⣿⣿⣿⣧⣿⣿⣿⣿⣿⣿⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿┃"
"┃     └────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃   qui                                            seg                                         hoje┃"
"┃dia    provider  tokens   custo                                                                   ┃"
"┃06/29  claude    61.1K    $0.31                                                                   ┃"
"┃06/30  claude    159.3K   $0.80                                                                   ┃"
"┃07/01  claude    613.6K   $3.07                                                                   ┃"
"┃07/02  claude    330.0K   $1.65                                                                   ┃"
"┃hoje   amp       –        $0.81 de $5.00 (cr $4.19)  sem logs locais de token                     ┃"
"┃                             t 24h/7d     r atualizar     esc voltar                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Total 7d: 1.2M tokens / $5.82 ┛"
