src/tui/render/snapshots/agent_bar__tui__render__history__tests__history_day.snap
---
source: src/tui/render/history.rs
expression: terminal.backend()
---
"┏ Histórico (24h) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃87.9K│        ⡇           ⡇           ⡆                                                   ┌──────┐┃"
"┃     │       ⢸⣿          ⢸⣿          ⢰⣷           ⡇                                       │claude│┃"
"┃     │       ⢸⣿          ⢸⣿          ⢸⣿          ⢸⣷          ⢰                            │codex │┃"
"┃     │       ⣿⣿⡇         ⣿⣿⡇         ⣾⣿⡆         ⢸⣿          ⣾⡆          ⢀                └──────┘┃"
"┃     │       ⣿⣿⡇         ⣿⣿⡇         ⣿⣿⡇         ⣿⣿⡆         ⣿⡇          ⣸⡀                       ┃"
"┃     │      ⢸⣿⣿⣿        ⢸⣿⣿⣿        ⢰⣿⣿⣷        ⢀⣿⣿⡇        ⢸⣿⣿          ⣿⡇          ⢠            ┃"
"┃     │      ⢸⣿⣿⣿        ⢸⣿⣿⣿        ⢸⣿⣿⣿        ⢸⣿⣿⣧        ⣼⣿⣿⡄        ⢰⣿⣷          ⣾⡆           ┃"
"┃     │      ⣿⣿⣿⣿⡇       ⣿⣿⣿⣿⡇       ⣾⣿⣿⣿⡆       ⣼⣿⣿⣿        ⣿⣿⣿⡇        ⣸⣿⣿⡀        ⢠⣿⣧          ⢰┃"
"┃     │      ⣿⣿⣿⣿⡇       ⣿⣿⣿⣿⡇       ⣿⣿⣿⣿⡇       ⣿⣿⣿⣿⡄      ⢰⣿⣿⣿⣷        ⣿⣿⣿⡇        ⣸⣿⣿⡀         ⣿┃"
"┃     │     ⢸⣿⣿⣿⣿⣿      ⢸⣿⣿⣿⣿⣿      ⢸⣿⣿⣿⣿⣿      ⢠⣿⣿⣿⣿⡇      ⢸⣿⣿⣿⣿       ⢰⣿⣿⣿⣷        ⣿⣿⣿⡇        ⢸⣿┃"
"┃     │     ⢸⣿⣿⣿⣿⣿      ⢸⣿⣿⣿⣿⣿      ⢸⣿⣿⣿⣿⣿      ⢸⣿⣿⣿⣿⣧      ⣿⣿⣿⣿⣿⡇      ⣸⣿⣿⣿⣿⡀      ⢸⣿⣿⣿⣿        ⣿⣿┃"
"┃     │     ⣿⣿⣿⣿⣿⣿⡇     ⣿⣿⣿⣿⣿⣿⡇     ⣿⣿⣿⣿⣿⣿⡇     ⣾⣿⣿⣿⣿⣿     ⢀⣿⣿⣿⣿⣿⣇      ⣿⣿⣿⣿⣿⡇      ⣼⣿⣿⣿⣿⡄      ⢸⣿⣿┃"
"┃     │     ⣿⣿⣿⣿⣿⣿⡇     ⣿⣿⣿⣿⣿⣿⡇     ⣿⣿⣿⣿⣿⣿⡇     ⣿⣿⣿⣿⣿⣿⡀    ⢸⣿⣿⣿⣿⣿⣿     ⢰⣿⣿⣿⣿⣿⣷     ⢀⣿⣿⣿⣿⣿⣇      ⣾⣿⣿┃"
"┃     │    ⢸⣿⣿⣿⣿⣿⣿⣿    ⢸⣿⣿⣿⣿⣿⣿⣿    ⢸⣿⣿⣿⣿⣿⣿⣿    ⢸⣿⣿⣿⣿⣿⣿⡇    ⣾⣿⣿⣿⣿⣿⣿⡆    ⣸⣿⣿⣿⣿⣿⣿⡀    ⢸⣿⣿⣿⣿⣿⣿     ⢰⣿⣿⣿┃"
"┃     │    ⢸⣿⣿⣿⣿⣿⣿⣿    ⢸⣿⣿⣿⣿⣿⣿⣿    ⢸⣿⣿⣿⣿⣿⣿⣿    ⢸⣿⣿⣿⣿⣿⣿⣇    ⣿⣿⣿⣿⣿⣿⣿⡇    ⣿⣿⣿⣿⣿⣿⣿⡇    ⣿⣿⣿⣿⣿⣿⣿⡇    ⣾⣿⣿⣿┃"
"┃0    │⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿⣿⣿⣿⣿⣿⣿⣿⣇⣀⣀⣀⣿⣿⣿⣿⣿⣿⣿⣿⣇⣀⣀⣀⣿⣿⣿⣿⣿⣿⣿⣿⣀⣀⣀⣸⣿⣿⣿⣿⣿⣿⣿⣿⣀⣀⣀⣰⣿⣿⣿⣿⣿⣿⣿⣷⣀⣀⣀⣰⣿⣿⣿⣿⣿⣿⣿⣷⣀⣀⣀⣰⣿⣿⣿⣿┃"
"┃     └────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃   13h                                            01h                                        agora┃"
"┃dia    provider  tokens   custo                                                                   ┃"
"┃06/25  claude    238.5K   $1.19                                                                   ┃"
"┃06/26  claude    268.7K   $1.34                                                                   ┃"
"┃06/27  claude    210.0K   $1.05                                                                   ┃"
"┃06/28  claude    644.1K   $3.22                                                                   ┃"
"┃06/29  claude    341.5K   $1.71                                                                   ┃"
"┃06/30  claude    159.3K   $0.80                                                                   ┃"
"┃07/01  claude    613.6K   $3.07                                                                   ┃"
"┃07/02  claude    330.0K   $1.65                                                                   ┃"
"┃07/01  codex     173.9K   $0.87                                                                   ┃"
"┃07/02  codex     330.0K   $1.65                                                                   ┃"
"┃                             t 24h/7d     r atualizar     esc voltar                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Total 7d: 3.3M tokens / $16.55 ┛"
