src/tui/render/snapshots/agent_bar__tui__render__history__tests__history_day_list_scrolled.snap
---
source: src/tui/render/history.rs
expression: terminal.backend()
---
"┏ Histórico (7 dias) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃   1k┤           █           █           █           █           █           █           █        ┃"
"┃     │           █           █           █           █           █           █           █        ┃"
"┃     │           █           █           █           █           █           █           █        ┃"
"┃  251┤           █           █           █           █           █           █           █        ┃"
"┃     │           █           █           █           █           █           █           █        ┃"
"┃     │           █           █           █           █           █           █           █        ┃"
"┃     │           █           █           █           █           █           █           █        ┃"
"┃    0┴────────────────────────────────────────────────────────────────────────────────────        ┃"
"┃           sex         sáb         dom         seg         ter         qua         qui            ┃"
"┃  ● Fable 5 7k                                                                                    ┃"
"┃▸ 29/06 · seg · 1k · $0.01 · 1 sessões                                                        ▲ +3┃"
"┃▸ 28/06 · dom · 1k · $0.01 · 1 sessões                                                            ┃"
"┃▸ 27/06 · sáb · 1k · $0.01 · 1 sessões                                                            ┃"
"┃▸ 26/06 · sex · 1k · $0.01 · 1 sessões                                                            ┃"
"┃▸ 25/06 · qui · 1k · $0.01 · 1 sessões                                                            ┃"
"┃▸ 24/06 · qua · 1k · $0.01 · 1 sessões                                                            ┃"
"┃▸ 23/06 · ter · 1k · $0.01 · 1 sessões                                                            ┃"
"┃                      ↵ expandir     t 24h/7d     r atualizar     esc voltar                      ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 7 DIAS $0.10 · 10k tok · 10 sessões ┛"
