src/tui/render/snapshots/agent_bar__tui__render__history__tests__history_renders_wide_160.snap
---
source: src/tui/render/history.rs
expression: terminal.backend()
---
"┏ Historico (7 dias) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃claude   ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇┃"
"┃                                                                                                                                                              ┃"
"┃codex    ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃provider  tokens (7d)  custo (7d)  tendencia                                                                                                                  ┃"
"┃claude    2.2M         $15.10      ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇┃"
"┃codex     750K         $7.50       ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┃                                                                                                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Total 7d: 2.9M tokens / $22.60 ┛"
