src/tui/render/snapshots/agent_bar__tui__render__history__tests__history_snapshot_empty.snap
---
source: src/tui/render/history.rs
expression: terminal.backend()
---
"┏ Historico (7 dias) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ Sem registros nos ultimos 7 dias.                            ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┃                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
