src/tui/render/snapshots/agent_bar__tui__render__history__tests__history_snapshot_with_expanded_day.snap
---
source: src/tui/render/history.rs
expression: terminal.backend()
---
"┏ Histórico (7 dias) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃  31k┤                                                                                 █          ┃"
"┃     │                                                                                 █          ┃"
"┃     │                                                                                 █          ┃"
"┃     │                                                                                 █          ┃"
"┃     │                                                                                 █          ┃"
"┃     │                                                                                 █          ┃"
"┃     │                                                                                 █          ┃"
"┃     │                                                                                 █          ┃"
"┃     │                                                                               ▇ █          ┃"
"┃     │                                                                               █ █          ┃"
"┃   8k┤                                                                  ▃            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃     │                                                                  █            █ █          ┃"
"┃    0┴────────────────────────────────────────────────────────────────────────────────────        ┃"
"┃        sáb         dom         seg         ter         qua         qui         sex               ┃"
"┃  ● Fable 5 12k  ● Opus 4.8 31k  ● GPT-5.5 8k                                                     ┃"
"┃▾ 10/07 · hoje · 43k · $0.28 · 2 sessões                                                          ┃"
"┃    14:42  —  Opus 4.8  31k  $0.15                                                                ┃"
"┃    09:15  agent-bar  Fable 5  12k  $0.12                                                         ┃"
"┃▸ 09/07 · qui · 8k · $0.04 · 1 sessões                                                            ┃"
"┃                      ↵ expandir     t 24h/7d     r atualizar     esc voltar                      ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 7 DIAS $0.32 · 52k tok · 3 sessões ┛"
