src/tui/render/snapshots/agent_bar__tui__render__history__tests__history_table_scrolled.snap
---
source: src/tui/render/history.rs
assertion_line: 960
expression: terminal.backend()
---
"┏ Histórico (7 dias) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃1.0K│            ⢸             ⡇            ⢸            ⢸             ⡇            ⡇            ⢸┃"
"┃    │            ⢸             ⡇            ⢸            ⢸             ⡇            ⡇            ⢸┃"
"┃    │            ⢸⡇            ⡇            ⢸            ⢸             ⡇            ⣿            ⢸┃"
"┃    │            ⢸⡇            ⡇            ⢸            ⢸             ⡇            ⣿            ⢸┃"
"┃    │            ⣿⡇           ⢸⣿            ⣿⡇           ⣿⡇           ⢸⣿           ⢸⣿            ⣿┃"
"┃    │            ⣿⡇           ⢸⣿            ⣿⡇           ⣿⡇           ⢸⣿           ⢸⣿            ⣿┃"
"┃    │            ⣿⣿           ⢸⣿            ⣿⡇           ⣿⡇           ⢸⣿           ⢸⣿⡇           ⣿┃"
"┃0   │⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿⣿⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸⣿⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿⣇⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿⣇⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸⣿⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸⣿⣇⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣿┃"
"┃    └─────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃  qui                                             seg                                         hoje┃"
"┃dia    provider  tokens   custo                                                                   ┃"
"┃06/28  amp2      1.0K     -                                                                   ▲ +5┃"
"┃06/29  amp2      1.0K     -                                                                       ┃"
"┃06/30  amp2      1.0K     -                                                                       ┃"
"┃07/01  amp2      1.0K     -                                                                       ┃"
"┃07/02  amp2      1.0K     -                                                                       ┃"
"┃06/23  claude    1.0K     -                                                                  ▼ +19┃"
"┃                             t 24h/7d     r atualizar     esc voltar                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Total 7d: 30.1K tokens ┛"
