src/tui/render/snapshots/agent_bar__tui__render__history__tests__history_table_shows_dual_tokens_with_cache_suffix.snap
---
source: src/tui/render/history.rs
assertion_line: 889
expression: terminal.backend()
---
"┏ Histórico (7 dias) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃1.4M│                                                                                     ┌──────┐┃"
"┃    │                                                                                     │claude│┃"
"┃    │                                                                                     └──────┘┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                            ⡇┃"
"┃    │                                                                                           ⢠⣧┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃    │                                                                                           ⢸⣿┃"
"┃0   │⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣸⣿┃"
"┃    └─────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃  qui                                             seg                                         hoje┃"
"┃dia    provider  tokens                       custo                                               ┃"
"┃07/02  claude    900.0K (+500.0K cache)       $5.33                                               ┃"
"┃                             t 24h/7d     r atualizar     esc voltar                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Total 7d: 900.0K (+500.0K cache) tokens / $5.33 ┛"
